<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.clocks.detail.ClockDetailFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/color_gray_light"
        android:orientation="vertical"
        tools:context=".view.RegionCountReportActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:elevation="0dp"
            android:fitsSystemWindows="true"
            app:elevation="0dp">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                app:expandedTitleMarginEnd="56dp"
                app:expandedTitleMarginStart="40dp"
                app:layout_scrollFlags="enterAlways">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageViewClock"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/app_name"
                                android:padding="5dp"
                                android:src="@drawable/clock_outline_white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/_48ssp"
                            android:layout_marginEnd="@dimen/_48ssp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textViewClockName"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="2dp"
                                    android:layout_weight="0.5"
                                    android:gravity="center"
                                    android:text="Mesut Yılmaz"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    app:layout_constraintStart_toStartOf="@+id/imageViewClock" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textViewClockIdentity"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.5"
                                    android:gravity="center"
                                    android:text="4293748546"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    app:layout_constraintStart_toStartOf="@+id/imageViewClock" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_12ssp"
                android:background="@drawable/corner_shape_background"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_12ssp"
                        android:layout_marginTop="@dimen/_8ssp"
                        android:layout_marginEnd="@dimen/_12ssp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewAlarm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/alarm" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="0dp"

                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:text="@string/online"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageViewSetting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:src="@drawable/setting"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText

            android:id="@+id/editTextTextMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12ssp"
            android:layout_marginEnd="@dimen/_12ssp"
            android:layout_weight="0.6"
            android:ems="10"
            android:hint="@string/hint_message"

            android:inputType="textPersonName"
            app:backgroundTint="@color/white" />

        <ImageButton
            android:id="@+id/imageButtonSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@color/white"
            android:src="@drawable/send" />

    </LinearLayout>


</LinearLayout>